node-jon/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-node
  labels:
    app: hello-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-node
  template:
    metadata:
      labels:
        app: hello-node
    spec:
      containers:
      - name: node
        image: public.ecr.aws/sctp-sandbox/luqman-flask-ecr-app:latest
        ports:
        - containerPort: 3000
