node-jon/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-node
spec:
  ingressClassName: nginx
  rules:
  - host: http://a9e8f916c2e664bfd81e50f1c7e9fc7e-1416027462.us-east-1.elb.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: hello-node
            port:
              number: 80
        path: /
        pathType: Prefix
